--- a/physical-performance-back/package.json
+++ b/physical-performance-back/package.json
@@ -1,18 +1,19 @@
 {
   "name": "physical-performance-back",
-  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node ./src/app.js",
-    "dev": "npx nodemon ./src/app.js"
+    "build": "tsc",
+    "start": "node dist/app.js",
+    "dev": "nodemon src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@joi/date": "^2.1.0",
+    "@prisma/client": "^5.5.2",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
@@ -24,6 +25,12 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/cors": "^2.8.16",
+    "@types/express": "^4.17.21",
+    "@types/pg": "^8.10.9",
+    "nodemon": "^3.0.1",
+    "prisma": "^5.5.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
